--- a/boot-demo/src/main/resources/application.properties
+++ b/boot-demo/src/main/resources/application.properties
@@ -2,7 +2,18 @@ server.port=2010
 
 #注册到Eureka Server的应用名称
 spring.application.name=boot-demo
+
 #设置与Eureka Server交互的地址
 eureka.client.serviceUrl.defaultZone=http://admin:admin@localhost:1000/eureka/
+
 #是否将自己的ip注册到Eureka Server上
 eureka.instance.prefer-ip-address=true
+
+#设置断路器 为启用
+feign.hystrix.enabled=true
+
+#线程池核心线程数
+hystrix.threadpool.default.coreSize=10
+
+#超时时间
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
