--- a/boot-zuul/pom.xml
+++ b/boot-zuul/pom.xml
@@ -4,11 +4,10 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.boot</groupId>
-    <artifactId>eureka</artifactId>
+    <artifactId>zuul</artifactId>
     <version>0.0.1</version>
-    <packaging>jar</packaging>
-    <name>eureka</name>
-    <description>Eureka</description>
+    <name>zuul</name>
+    <description>Zuul</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -29,14 +28,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka-server</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -64,6 +66,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
