--- a/boot-eureka/src/main/resources/application.properties
+++ b/boot-eureka/src/main/resources/application.properties
@@ -7,7 +7,7 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
 #设置与Eureka Server交互的地址
-eureka.client.serviceUrl.defaultZone=http://localhost:1000/eureka/
+eureka.client.serviceUrl.defaultZone=http://admin:admin@localhost:1000/eureka/
 
 #开启基于HTTP basic的认证
 security.basic.enabled=true
