--- a/boot-zuul/src/main/resources/application.properties
+++ b/boot-zuul/src/main/resources/application.properties
@@ -1,25 +1,29 @@
-server.port=1020
+server.port=1001
 
 #注册到Eureka Server的应用名称
-spring.application.name=boot-ZUUL
-
-#设置与Eureka Server交互的地址
-eureka.client.serviceUrl.defaultZone=http://admin:admin@localhost:1000/eureka/
+spring.application.name=boot-zuul
 
 #是否将自己的ip注册到Eureka Server上
 eureka.instance.prefer-ip-address=true
+
+#设置与Eureka Server交互的地址
+eureka.client.serviceUrl.defaultZone=http://admin:admin@localhost:1000/eureka/
 
 #路由配置
 zuul.routes.boot-demo.path=/demo/**
 zuul.routes.boot-demo.serviceId=boot-demo
 
-#设置断路器超时时间
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=240000
-hystrix.metrics.enabled=true
-
 zuul.host.socket-timeout-millis=60000
 zuul.host.connect-timeout-millis=60000
-zuul.semaphore.max-semaphores=2000 
+zuul.semaphore.max-semaphores=2000
 
+#超时设置
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=240000
+
+#连接、超时设置，feign的底层调用的还是ribbon
 ribbon.ConnectTimeout=60000
 ribbon.ReadTimeout=60000
+
+#文件上传大小配置
+spring.http.multipart.maxFileSize=100MB
+spring.http.multipart.maxRequestSize=100MB
